--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		
 		We exist to make sure food stays safe and accessible — by engineering refrigeration systems that support every step from harvest to table.
 		
-		Core mission: Build refrigeration technology that safeguards the world’s food supply chain so no one goes hungry because food couldn’t be properly processed or stored.
+		Core mission: Build refrigeration technology that keeps food safe from harvest to table—so no one goes hungry because food couldn’t be properly stored or processed.
 
 
     </p>
